...
            alertMessage += "\n\n 🔵 You've entered an overnight shift. This shift will carry over to the next day. If this was intentional, no problem! Otherwise, please double-check the entered shift times. \n"
        }
        
        if canSubmit() && (model.inspections.allSatisfy({ $0.formDidValidate })) {
            let alert = UIAlertController(title: "Are you sure?", message: alertMessage, preferredStyle: .alert)
            
            alert.addAction(UIAlertAction(title: "Yes", style: .default, handler: { [weak self] _ in
                guard let strongSelf = self else { return }
                
                // First navigate
                strongSelf.navigationController?.popViewController(animated: true)
                
                // Then update model after a longer delay to ensure view hierarchy is ready
...
        styleCard(layer: containerView.layer)
        styleNavBar()
    }
    
    private func styleNavBar() {
        guard let navigation = self.navigationController else { return }
        self.title = "Shift Overview"
        navigation.navigationBar.isTranslucent = false
        navigation.navigationBar.tintColor = .white
        navigation.navigationBar.titleTextAttributes = [.foregroundColor: UIColor.white]
        setGradiantBackground(navigationBar: navigation.navigationBar)
        if let model = self.model, [.Draft, .Errors].contains(model.getStatus()) {
            setRightNavButtons()
        }
    }
    
    private func setRightNavButtons() {
        let deleteButton = UIBarButtonItem(title: "Delete", style: .plain, target: self, action: #selector(self.didTapDeleteButton(sender:)))
        let saveButton = UIBarButtonItem(title: "Submit", style: .done, target: self, action: #selector(self.completeAction(sender:)))
        let spacer = UIBarButtonItem(barButtonSystemItem: .fixedSpace, target: nil, action: nil)
        navigationItem.setRightBarButtonItems([saveButton, spacer, deleteButton], animated: true)
    }


...
    }
}

// MARK: CollectionView
extension ShiftViewController: UICollectionViewDataSource, UICollectionViewDelegate, UICollectionViewDelegateFlowLayout {
    private func setupCollectionView() {
        collectionView.accessibilityLabel = "shiftform"
        collectionView.accessibilityValue = "shiftform"
        for cell in collectionCells {
            register(cell: cell)
        }
        collectionView.delegate = self
        collectionView.dataSource = self
...
