...
                                                    <constraint firstAttribute="height" constant="54" id="Jx1-vT-56f"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="280" id="vjK-sv-rqv"/>
                                                </constraints>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <inset key="contentEdgeInsets" minX="12" minY="0.0" maxX="12" maxY="0.0"/>
                                                <inset key="imageEdgeInsets" minX="32" minY="16" maxX="200" maxY="16"/>
                                                <state key="normal" title="Login with IDIR" image="arrow.up.right.square" catalog="system">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="loginWithIdirAction:" destination="mUX-cz-9L9" eventType="touchUpInside" id="70n-ju-jmB"/>
                                                </connections>
                                            </button>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avH-r0-8vm">
                                        <rect key="frame" x="539" y="15" width="199" height="42"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="42" id="PS7-sd-gaH"/>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="199" id="hHC-Rh-Sqt"/>
                                        </constraints>
                                        <state key="normal" title="Add New Shift"/>
                                        <connections>
                                            <action selector="addEntryAction:" destination="JwX-i7-BNh" eventType="touchUpInside" id="vg4-rN-YmO"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
