...
    }
}


struct WatercraftFieldHeaderConstants {
    struct Passport {
        static let isPassportHolder = "Is this a Passport Holder?"
        static let inspectionTime = "Time of Inspection"
        static let passportNumber = "Passport Number"
        static let launchedOutsideBC = "Launched outside BC/AB in the last 30 days?"
        static let k9Inspection = "k9 Inspection Performed?"
        static let decontaminationPerformed = "Decontamination Performed?"
        static let marineSpeciesFound = "Marine Species Found"
...
