...
        buttonView.translatesAutoresizingMaskIntoConstraints = false
        NSLayoutConstraint.activate([
            fillButton.centerXAnchor.constraint(equalTo: buttonView.centerXAnchor),
            fillButton.centerYAnchor.constraint(equalTo: buttonView.centerYAnchor),
        ])
        
        fillButton.setTitle("Continue", for: .normal)
        showSyncCompletedAnimation()
    }
    
    private func styleSyncError() {
        syncState = SyncState.error
        statusLabel.text = "There was an error while syncing your data"
...
